# airbnb_backend

./: pyproject.toml
bookings/: models.py  serializers.py
bookings/migrations/: 0001_initial.py
categories/: models.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: authentication.py  settings.py  urls.py
dms/: admin.py  models.py
dms/migrations/: 0001_initial.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py
medias/: models.py  serializers.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py  0003_alter_photo_room.py
reviews/: models.py
reviews/migrations/: 0001_initial.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name.py  0003_alter_amenity_options.py  0004_room_category.py  0005_alter_room_owner.py
rooms/templates/: all_rooms.html  room_detail.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0003_alter_user_avatar.py
wishlists/: models.py  views.py
wishlists/migrations/: 0001_initial.py
